---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed that the mod would create a small box in the top left corner of the screen in certain multiplayer situations.

---------------------------------------------------------------------------------------------------
Version: 1.1.30
Date: 09. 12. 2021
  Features:
    - Added the ability to specify an exact amount for top level ingredients, which adjusts the configured products accordingly. This is a band-aid way of enabling calculations by input rather than output. (thanks curiosity!)
  Changes:
    - Improved matrix solver algorithm to provide more stable results (thanks scottmsul!)

---------------------------------------------------------------------------------------------------
Version: 1.1.29
Date: 04. 11. 2021
  Bugfixes:
    - Fixed that the priority product selection would be dropped when disabling a recipe line
    - Fixed that recipes would show products with amount equal to 0 when they have a subfloor
    - Fixed that the utility dialog combinator blueprint was limited to two machines per combinator
    - Fixed that the buttons to check off line recipes would show a tooltip when it shouldn't

---------------------------------------------------------------------------------------------------
Version: 1.1.28
Date: 29. 10. 2021
  Bugfixes:
    - Fixed a crash when trying to pipette a beacon from the Factory Planner interface

---------------------------------------------------------------------------------------------------
Version: 1.1.27
Date: 24. 10. 2021
  Features:
    - Added the ability for beacons to have more than one type of module at once (huge thanks to curiosity!)
  Bugfixes:
    - Fixed a crash related to ingredient satisfaction and disabled recipes
    - Fixed a crash when trying to add beacons while having the Satisfactorio mod active