@@ -6,7 +6,8 @@ Date: 00. 00. 0000
   Changes:
     -
   Bugfixes:
-    - Fixed that the mod would create a small box in the top left corner of the screen in certain multiplayer situations.
+    - Fixed an issue where the mod would sometimes offer the incorrect machines for a recipe
+    - Fixed that the mod would create a small box in the top left corner of the screen in certain multiplayer situations
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.30
